# nyc-subway-monitor

./: .devcontainer.json  .dockerignore  .env.example  .gitignore  CLEANUP_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  FINAL_DELIVERY.md  LICENSE  PROJECT_STATUS.md  README.md  README_LOCAL.md  README_old.md  commitlint.config.js  docker-compose.yml  monitor.sh  mypy.ini  package.json  pnpm-lock.yaml  pytest.ini  setup.sh  start.sh  test_system.py
backend/: .dockerignore  Dockerfile  load_all_stations.py  mypy.ini  populate_stations.py  pyproject.toml  pytest.ini  requirements.txt  requirements_minimal.txt
backend/app/: __init__.py  config.py  main.py
backend/app/core/: __init__.py  exceptions.py  security.py
backend/app/db/: __init__.py  crud.py  database.py  models.py
backend/app/ml/: __init__.py  features.py  predict.py  train.py
backend/app/ml/models/: __init__.py  isolation_forest.py  lstm_autoencoder.py
backend/app/ml/training/: __init__.py  dataset.py  trainer.py
backend/app/routers/: __init__.py  anomaly.py  feed.py  health.py  stations.py  websocket.py
backend/app/schemas/: __init__.py  anomaly.py  feed.py  stations.py
backend/app/utils/: cache.py  json.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_features.py
frontend/: .dockerignore  .eslintrc.json  Dockerfile  Dockerfile.prod  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
infra/: .env.example  apply_fixes.sh  docker-compose.override.yml  docker-compose.yml  prometheus.yml
nginx/: nginx.conf
(+96 files in other folders)
